[package]
name = "semfilter"
version = "0.1.0"
authors = ["Mikael Forslund <756148+mikaelforslund@users.noreply.github.com>", "Erich Liebmann <7557807+qpanda@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3"
file_diff = "1"
peg = "0.7.0"
ansi_term = "0.12"
clap = "2.33.3"
anyhow = "1.0"
chrono = "0.4"
semver = "1.0.4"